--- a/app/src/main/res/menu/bottom_nav_menu.xml
+++ b/app/src/main/res/menu/bottom_nav_menu.xml
@@ -7,6 +7,10 @@
         android:title="@string/title_preferences" />
 
     <item
+        android:id="@+id/navigation_explore"
+        android:icon="@android:drawable/ic_menu_compass"
+        android:title="@string/title_explore" />
+    <item
         android:id="@+id/navigation_dashboard"
         android:icon="@drawable/ic_dashboard_black_24dp"
         android:title="@string/title_dashboard" />
