--- a/app/src/main/res/layout/fragment_explore.xml
+++ b/app/src/main/res/layout/fragment_explore.xml
@@ -9,12 +9,57 @@
     <com.yuyakaido.android.cardstackview.CardStackView
         android:id="@+id/card_stack_view"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="0dp"
         android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
         android:layout_marginEnd="8dp"
         android:padding="4dp"
+        app:layout_constraintBottom_toTopOf="@id/button_row"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent">
+
+    </com.yuyakaido.android.cardstackview.CardStackView>
+
+    <LinearLayout
+        android:id="@+id/button_row"
+        android:layout_width="0dp"
+        android:layout_height="80dp"
+        android:layout_marginBottom="8dp"
+        android:divider="@drawable/divider"
+        android:gravity="center"
+        android:orientation="horizontal"
+        android:showDividers="middle"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/card_stack_view">
+
+        <com.google.android.material.floatingactionbutton.FloatingActionButton
+            android:id="@+id/explore_skip_button"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:backgroundTint="#FFFFFF"
+            android:clickable="true"
+            android:contentDescription="@string/skip"
+            android:src="@drawable/skip_red"
+            app:fabSize="auto"
+            app:tint="#FF0000"
+            app:backgroundTint="#9AFFFFFF"
+            app:rippleColor="#FF0000" />
+
+        <com.google.android.material.floatingactionbutton.FloatingActionButton
+            android:id="@+id/explore_pref_button"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:backgroundTint="#FFFFFF"
+            android:clickable="true"
+            android:contentDescription="@string/pref"
+            android:src="@drawable/like_green"
+            app:backgroundTint="#9AFFFFFF"
+            app:fabSize="auto"
+            app:tint="#6FE2B3"
+            app:rippleColor="#6FE2B3" />
+
+    </LinearLayout>
 </androidx.constraintlayout.widget.ConstraintLayout>
