--- a/app/src/main/res/layout/fragment_explore.xml
+++ b/app/src/main/res/layout/fragment_explore.xml
@@ -25,12 +25,11 @@
         android:id="@+id/button_row"
         android:layout_width="0dp"
         android:layout_height="80dp"
-        android:layout_marginBottom="8dp"
         android:divider="@drawable/divider"
         android:gravity="center"
         android:orientation="horizontal"
         android:showDividers="middle"
-        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintBottom_toTopOf="@+id/imageView"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/card_stack_view">
@@ -39,27 +38,42 @@
             android:id="@+id/explore_skip_button"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:backgroundTint="#FFFFFF"
+            app:fabSize="auto"
             android:clickable="true"
             android:contentDescription="@string/skip"
+            android:elevation="1dp"
             android:src="@drawable/skip_red"
-            app:fabSize="auto"
-            app:tint="#FF0000"
-            app:backgroundTint="#9AFFFFFF"
-            app:rippleColor="#FF0000" />
+            app:elevation="1dp"
+            app:borderWidth="0dp"
+            app:rippleColor="#FF0000"
+            app:tint="#FF0000" />
 
         <com.google.android.material.floatingactionbutton.FloatingActionButton
             android:id="@+id/explore_pref_button"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:backgroundTint="#FFFFFF"
             android:clickable="true"
             android:contentDescription="@string/pref"
+            android:elevation="1dp"
+            app:borderWidth="0dp"
             android:src="@drawable/like_green"
-            app:backgroundTint="#9AFFFFFF"
-            app:fabSize="auto"
-            app:tint="#6FE2B3"
-            app:rippleColor="#6FE2B3" />
+            app:elevation="1dp"
+            app:rippleColor="#6FE2B3"
+            app:tint="#6FE2B3" />
 
     </LinearLayout>
+
+    <ImageView
+        android:id="@+id/imageView"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="8dp"
+        android:layout_marginEnd="8dp"
+        android:layout_weight="1"
+        android:src="@android:drawable/arrow_up_float"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/button_row"
+        app:tint="#27000000" />
 </androidx.constraintlayout.widget.ConstraintLayout>
