--- a/app/src/main/res/menu/bottom_nav_menu.xml
+++ b/app/src/main/res/menu/bottom_nav_menu.xml
@@ -11,12 +11,12 @@
         android:icon="@android:drawable/ic_menu_compass"
         android:title="@string/title_explore" />
     <item
-        android:id="@+id/navigation_dashboard"
-        android:icon="@drawable/ic_dashboard_black_24dp"
-        android:title="@string/title_dashboard" />
+        android:id="@+id/navigation_search"
+        android:icon="@android:drawable/ic_menu_search"
+        android:title="@string/title_search" />
 
     <item
-        android:id="@+id/navigation_search"
+        android:id="@+id/navigation_delete"
         android:icon="@android:drawable/ic_search_category_default"
         android:title="@string/title_search" />
 
